--- a/src/index.html
+++ b/src/index.html
@@ -13,17 +13,15 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
+    <div class="container-fluid">
+      <h1 class="mt-5">OMG! No lo vas a creer pero...</h1>
       <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
+      <h1>
+        <p id="My-resp">Mi gato se comio mi tarea</p>
+      </h1>
+      <button id="btn">
+        Dale!
+      </button>
     </div>
   </body>
 </html>
